--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,8 @@
-altair==4.2.0
-matplotlib==3.1.0
-matplotlib-inline==0.1.3
-matplotlib-venn==0.11.5
-numpy==1.21.5
-pandas==1.1.3
-scikit-learn==1.0.2
-scipy==1.3.0
-seaborn==0.11.2
-sklearn==0.0
-XlsxWriter==3.0.2
-
+altair
+matplotlib
+numpy
+pandas
+scikit-learn
+scipy
+seaborn
+sklearn
